Added error template

--- a/src/app/order/order-pre/order-pre.component.html
+++ b/src/app/order/order-pre/order-pre.component.html
@@ -17,7 +17,7 @@
       </div>  
     </div>
   </div>
-  <div class="row grey lighten-3">
+  <div class="row customFooterModal">
     <div class="customOrderButtons">
       <button type="button" class="btn btn-sm customButtonCancel waves-light" (click)="closeModal()">{{cancelButton}}</button>
       <button type="button" class="btn btn-primary btn-sm waves-light" (click)="newOrder()">{{confirmButton}}</button>
