--- a/src/styles.scss
+++ b/src/styles.scss
@@ -295,3 +295,7 @@ width: 100%!important;
     color:rgb(48, 47, 47)!important;
     border: solid 1px rgb(175, 174, 174);
 }
+
+.customFooterModal {
+    background-color: #eeeeee;
+}
