--- a/src/app/sales/sales.component.html
+++ b/src/app/sales/sales.component.html
@@ -21,6 +21,6 @@
   </li>
  </ul>
  <!-- Tab panels -->
- <div class="tab-content customContentCard">
+ <div class="tab-content customContentCard pb-0">
     <router-outlet></router-outlet>
  </div>
