--- a/src/app/select-item/select-item.component.html
+++ b/src/app/select-item/select-item.component.html
@@ -1,3 +1,5 @@
-<p>
-  <i class='fa fa-chevron-left'></i>   {{ text }}
-</p>
+<div class="d-flex justify-content-center pt-5">
+  <h5>
+    <i class='fa fa-chevron-left'></i>   {{ text }}
+  </h5>
+</div>
