--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,7 +15,7 @@
 }
 
 .customLi{
-    width: 3rem;
+    width: 3.5rem;
     text-align: center;
 }
 
@@ -93,7 +93,7 @@
 }
 
 .customMB{
-    margin-bottom:2.7rem;
+    margin-bottom:3.2rem;
 }
 
 .customButton{
@@ -169,7 +169,7 @@ table {
 }
 
 .customSideNav{
- margin-top:7.55rem!important;
+ margin-top:8.05rem!important;
  max-width: 100%!important;
  width:17%!important;
 }
@@ -303,4 +303,13 @@ width: 100%!important;
 
 .mdbSelectClass{
     z-index:10; 
+}
+
+.heightThree{
+    height: calc(100vh - 8.05rem);
+}
+
+.outletGeneric{
+    border-left: solid 1px lightgrey;
+    background-color: #f6f6f6;
 }
