Added delete modal template

--- a/src/app/cash-flows/cash-flows-list/cash-flows-list.component.html
+++ b/src/app/cash-flows/cash-flows-list/cash-flows-list.component.html
@@ -1,14 +1,10 @@
 <ng-template #deleteTemplate>
-  <div class="modal-header">
-    <h4 class="modal-title">Eliminar Movimiento</h4>
-  </div>
-  <div class="modal-body">
-    ¿Seguro desea eliminar este Movimiento?
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="deleteCashFlow()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancel</button>
-  </div>
+    <app-delete-template 
+        [modalTitle]="modalDeleteTitle" 
+        [modalMessage]="modalDeleteMessage" 
+        (delete)="deleteCashFlow()" 
+        (close)="closeModal()">
+    </app-delete-template>
 </ng-template>
 <div class="row">
     <div class="col-md-12 col-lg-12 col-sm-12 pr-0 pl-0 mr-0 pr-0 customTitleBar">
