--- a/src/styles.scss
+++ b/src/styles.scss
@@ -299,3 +299,10 @@ width: 100%!important;
 .customFooterModal {
     background-color: #eeeeee;
 }
+
+.modalContent {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1.5rem;
+    white-space: pre-line;
+}
