--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,14 +1,7 @@
 <ng-template #deleteTemplate>
-  <div class="modal-header">
-    <h4 class="modal-title">Eliminar Carta</h4>
-  </div>
-  <div class="modal-body">
-    ¿Estas seguro que desea eliminar esta carta?
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="deleteMenu()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancel</button>
-  </div>
+    <app-delete-template [modalTitle]="modalDeleteTitle" [modalMessage]="modalDeleteMessage" (delete)="deleteMenu()"
+        (close)="closeModal()">
+    </app-delete-template>
 </ng-template>
 
 <ng-template #noDelete>
