--- a/src/app/table/table-list/table-list.component.html
+++ b/src/app/table/table-list/table-list.component.html
@@ -3,16 +3,12 @@
 </ng-template>
 
 <ng-template #deleteTemplate>
-  <div class="modal-header">
-    <h4 class="modal-title">Eliminar Mesa</h4>
-  </div>
-  <div class="modal-body">
-    ¿Estas seguro que desea eliminar esta mesa?
-  </div>
-  <div class="modal-footer">
-    <button type="button" class="button special" (click)="deleteTable()">Ok</button>
-    <button type="button" class="button special" (click)="closeModal()">Cancel</button>
-  </div>
+  <app-delete-template 
+    [modalTitle]="modalDeleteTitle" 
+    [modalMessage]="modalDeleteMessage" 
+    (delete)="deleteTable()" 
+    (close)="closeModal()">
+  </app-delete-template>
 </ng-template>
 <!-- Grid Tables -->
 
