Estilos y validacion de nombre duplicado en productos. Tambien se agrega validacion de tamanos vs precios en productos

--- a/src/app/product/product-new/product-new.component.html
+++ b/src/app/product/product-new/product-new.component.html
@@ -1,3 +1,38 @@
+<ng-template #priceNotMatch>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Producto</h4>
+  </div>
+  <div class="modal-body">
+    El precio del producto no coincide con el precio del menor tamano. Se modificara el precio del producto para hacerlo coincidir.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModalAndContinue()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
+  </div>
+</ng-template>
+<ng-template #nameInvalid>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Producto</h4>
+  </div>
+  <div class="modal-body">
+    Ya existe un producto con ese nombre, elija uno diferente.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModal()">Ok</button>
+    <button type="button" class="button special" (click)="closeModal()">Cancelar</button>
+  </div>
+</ng-template>
+<ng-template #duplicatedSizes>
+  <div class="modal-header">
+    <h4 class="modal-title">Agregar Producto</h4>
+  </div>
+  <div class="modal-body">
+    Existen tamanos duplicados, por favor corrija e intente nuevamente.
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="button special" (click)="closeModal()">Ok</button>
+  </div>
+</ng-template>
 <div class="pageTitle">
   <div class="float-left">
     <header>
@@ -5,7 +40,6 @@
     </header>
   </div>
 </div>
-
 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12 col-xl-12 pt-3 pb-3 pl-1 pr-1">  
   <form method="post" novalidate [formGroup]="productForm">
       <div class="row mr-0 ml-0">
@@ -97,12 +131,11 @@
             <div [formGroupName]="i" class="form-group">              
               <div class="row">
                 <div class="select-wrapper col-md-5">
-                  <select formControlName="name" class="form-control" [class.is-invalid]="productForm.get('sizes').controls[i].controls.name.invalid && (productForm.get('sizes').controls[i].controls.name.dirty || productForm.get('sizes').controls[i].controls.name.touched)"
+                  <select formControlName="name" class="form-control  browser-default" [class.is-invalid]="productForm.get('sizes').controls[i].controls.name.invalid && (productForm.get('sizes').controls[i].controls.name.dirty || productForm.get('sizes').controls[i].controls.name.touched)"
                     id="{{ 'productSize' + i }}">
                     <option value="default" default>Seleccione el tamaño...</option>
-                    <option *ngFor = 'let size of sizesArray'>{{size}}</option>
+                    <option [value]="size._id" *ngFor = 'let size of sizesArray'>{{size.name}}</option>
                   </select>
-
                   <div *ngIf="productForm.get('sizes').controls[i].controls.name.invalid && (productForm.get('sizes').controls[i].controls.name.dirty || productForm.get('sizes').controls[i].controls.name.touched)" class="alert alert-danger">
                     El tamaño es requerido.
                   </div> 
@@ -160,7 +193,7 @@
       </div>
       <div class="row col-md-2 col-lg-2 col-xl-3 col-sm-2">
         <button class="btn btn-md btn-primary" type="reset" (click)='onBack()'>Atras</button> 
-        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid" type="submit" (click)="saveProduct()">Guardar</button>
+        <button class="btn btn-md btn-primary" [disabled]="productForm.invalid" type="submit" (click)="validateSizes()">Guardar</button>
       </div>    
     </form>
 </div>      
